# jentic-summer-hackathon

./: LICENSE  README.md  links.md  pyproject.toml
checklists/: api-spec-quality-checklist.md  demo-readme-checklist.md  prompt-submission-checklist.md
guides/: 00-install.md  01-what-is-arazzo.md  02-standard-agent-quickstart.md  03-arazzo-runner-quickstart.md  04-har-file-how-to.md  05-openapi-validation-checklist.md  06-submitting-your-pr.md
issues-template/: submission.yml
src/jentic_summer_hackathon/: __init__.py
submissions/: submission.yml
submissions/shubbham28-track-14-local-mcp-standard-agent/: .dockerignore  .gitignore  README.md  submission.yml
submissions/shubbham28-track-14-local-mcp-standard-agent/mcp-agent/: README.md  pyproject.toml  script.py
submissions/shubbham28-track-14-local-mcp-standard-agent/mcp-agent/client/: cli.py  llm.py  nl2cmd.py  orchestrator.py  presenters.py  streamlit_app.py  tools_schema.py
submissions/shubbham28-track-14-local-mcp-standard-agent/mcp-agent/configs/: config.yaml  mcp_servers.yaml
submissions/shubbham28-track-14-local-mcp-standard-agent/mcp-agent/docker/: browser.Dockerfile  client.Dockerfile  docker-compose.yml  filesystem.Dockerfile  system.Dockerfile
submissions/shubbham28-track-14-local-mcp-standard-agent/mcp-agent/scripts/: start_all.sh  test_booking.sh
submissions/shubbham28-track-14-local-mcp-standard-agent/mcp-agent/servers/: browser_server.py  filesystem_server.py  system_server.py
submissions/shubbham28-track-14-local-mcp-standard-agent/mcp-agent/servers/shared/: logging.py  protocol.py  security.py  types.py
submissions/shubbham28-track-14-local-mcp-standard-agent/mcp-agent/tests/: conftest.py  test_browser_server.py  test_cli_nl_flow.py  test_filesystem_server.py  test_nl2cmd.py  test_system_server.py
submissions/shubbham28-track-14-local-mcp-standard-agent/mcp-agent/tests/workflows/: test_workflow_booking.py  test_workflow_create_and_test.py  test_workflow_fastapi_health.py
tracks/track-01-standard-agent-discord/: .env.example  README.md  config.py  main.py  phase3_main.py  phase4_Jentic_main.py  phase4_main.py  pytest.ini  requirements.txt
tracks/track-02-har-to-openapi/: Makefile  README.md  discovery-report.md  har_analyzer.py  har_extractor.py  jsonplaceholder-api.json  jsonplaceholder-api.yaml  jsonplaceholder-test-workflow.arazzo.yaml  openapi.yaml  requirements.txt  sample-jsonplaceholder-sanitized.har  sanitizer.py  (+3 more)
(+143 files in other folders)
